srcnn_hls/solution1/.autopilot/db/srcnn.pp.0.cpp.clang-tidy.loop-label.out.log
C:\Users\james\Documents\Hardware_Final_Project_Private_V2\golden\srcnn_hls\solution1\.autopilot\db\srcnn.pp.0.cpp:3668:43: error: Invalid Directive: for current device, ram_2p + bram is invalid combination for BIND_STORAGE's option 'type + impl' [clang-diagnostic-error]
#pragma HLS BIND_STORAGE variable=w1 type=ram_2p impl=bram
                                          ^
C:\Users\james\Documents\Hardware_Final_Project_Private_V2\golden\srcnn_hls\solution1\.autopilot\db\srcnn.pp.0.cpp:3675:43: error: Invalid Directive: for current device, ram_2p + bram is invalid combination for BIND_STORAGE's option 'type + impl' [clang-diagnostic-error]
#pragma HLS BIND_STORAGE variable=w2 type=ram_2p impl=bram
                                          ^
C:\Users\james\Documents\Hardware_Final_Project_Private_V2\golden\srcnn_hls\solution1\.autopilot\db\srcnn.pp.0.cpp:3682:43: error: Invalid Directive: for current device, ram_2p + bram is invalid combination for BIND_STORAGE's option 'type + impl' [clang-diagnostic-error]
#pragma HLS BIND_STORAGE variable=w3 type=ram_2p impl=bram
                                          ^
C:\Users\james\Documents\Hardware_Final_Project_Private_V2\golden\srcnn_hls\solution1\.autopilot\db\srcnn.pp.0.cpp:3691:5: warning: Added loop label VITIS_LOOP_81_1:   [xilinx-label-all-loops]
    for (int i=0;i<1;i++){
    ^~~
    VITIS_LOOP_81_1: 
C:\Users\james\Documents\Hardware_Final_Project_Private_V2\golden\srcnn_hls\solution1\.autopilot\db\srcnn.pp.0.cpp:3691:5: note: FIX-IT applied suggested code changes
C:\Users\james\Documents\Hardware_Final_Project_Private_V2\golden\srcnn_hls\solution1\.autopilot\db\srcnn.pp.0.cpp:3692:7: warning: Added loop label VITIS_LOOP_82_2:   [xilinx-label-all-loops]
      for (int ky=0;ky<9;ky++){
      ^~~
      VITIS_LOOP_82_2: 
C:\Users\james\Documents\Hardware_Final_Project_Private_V2\golden\srcnn_hls\solution1\.autopilot\db\srcnn.pp.0.cpp:3692:7: note: FIX-IT applied suggested code changes
C:\Users\james\Documents\Hardware_Final_Project_Private_V2\golden\srcnn_hls\solution1\.autopilot\db\srcnn.pp.0.cpp:3693:9: warning: Added loop label VITIS_LOOP_83_3:   [xilinx-label-all-loops]
        for (int kx=0;kx<9;kx++){
        ^~~
        VITIS_LOOP_83_3: 
C:\Users\james\Documents\Hardware_Final_Project_Private_V2\golden\srcnn_hls\solution1\.autopilot\db\srcnn.pp.0.cpp:3693:9: note: FIX-IT applied suggested code changes
C:\Users\james\Documents\Hardware_Final_Project_Private_V2\golden\srcnn_hls\solution1\.autopilot\db\srcnn.pp.0.cpp:3703:5: warning: Added loop label VITIS_LOOP_93_4:   [xilinx-label-all-loops]
    for (int i=0;i<64;i++){
    ^~~
    VITIS_LOOP_93_4: 
C:\Users\james\Documents\Hardware_Final_Project_Private_V2\golden\srcnn_hls\solution1\.autopilot\db\srcnn.pp.0.cpp:3703:5: note: FIX-IT applied suggested code changes
C:\Users\james\Documents\Hardware_Final_Project_Private_V2\golden\srcnn_hls\solution1\.autopilot\db\srcnn.pp.0.cpp:3712:5: warning: Added loop label VITIS_LOOP_102_5:   [xilinx-label-all-loops]
    for (int i=0;i<32;i++){
    ^~~
    VITIS_LOOP_102_5: 
C:\Users\james\Documents\Hardware_Final_Project_Private_V2\golden\srcnn_hls\solution1\.autopilot\db\srcnn.pp.0.cpp:3712:5: note: FIX-IT applied suggested code changes
C:\Users\james\Documents\Hardware_Final_Project_Private_V2\golden\srcnn_hls\solution1\.autopilot\db\srcnn.pp.0.cpp:3713:7: warning: Added loop label VITIS_LOOP_103_6:   [xilinx-label-all-loops]
      for (int ky=0;ky<5;ky++){
      ^~~
      VITIS_LOOP_103_6: 
C:\Users\james\Documents\Hardware_Final_Project_Private_V2\golden\srcnn_hls\solution1\.autopilot\db\srcnn.pp.0.cpp:3713:7: note: FIX-IT applied suggested code changes
C:\Users\james\Documents\Hardware_Final_Project_Private_V2\golden\srcnn_hls\solution1\.autopilot\db\srcnn.pp.0.cpp:3714:9: warning: Added loop label VITIS_LOOP_104_7:   [xilinx-label-all-loops]
        for (int kx=0;kx<5;kx++){
        ^~~
        VITIS_LOOP_104_7: 
C:\Users\james\Documents\Hardware_Final_Project_Private_V2\golden\srcnn_hls\solution1\.autopilot\db\srcnn.pp.0.cpp:3714:9: note: FIX-IT applied suggested code changes
C:\Users\james\Documents\Hardware_Final_Project_Private_V2\golden\srcnn_hls\solution1\.autopilot\db\srcnn.pp.0.cpp:3760:11: warning: Added loop label VITIS_LOOP_150_8:   [xilinx-label-all-loops]
          for (int i=0;i<1;i++){
          ^~~
          VITIS_LOOP_150_8: 
C:\Users\james\Documents\Hardware_Final_Project_Private_V2\golden\srcnn_hls\solution1\.autopilot\db\srcnn.pp.0.cpp:3760:11: note: FIX-IT applied suggested code changes
C:\Users\james\Documents\Hardware_Final_Project_Private_V2\golden\srcnn_hls\solution1\.autopilot\db\srcnn.pp.0.cpp:3761:13: warning: Added loop label VITIS_LOOP_151_9:   [xilinx-label-all-loops]
            for (int ky=0; ky<9; ky++) {
            ^~~
            VITIS_LOOP_151_9: 
C:\Users\james\Documents\Hardware_Final_Project_Private_V2\golden\srcnn_hls\solution1\.autopilot\db\srcnn.pp.0.cpp:3761:13: note: FIX-IT applied suggested code changes
C:\Users\james\Documents\Hardware_Final_Project_Private_V2\golden\srcnn_hls\solution1\.autopilot\db\srcnn.pp.0.cpp:3762:15: warning: Added loop label VITIS_LOOP_152_10:   [xilinx-label-all-loops]
              for (int kx=0; kx<9; kx++) {
              ^~~
              VITIS_LOOP_152_10: 
C:\Users\james\Documents\Hardware_Final_Project_Private_V2\golden\srcnn_hls\solution1\.autopilot\db\srcnn.pp.0.cpp:3762:15: note: FIX-IT applied suggested code changes
C:\Users\james\Documents\Hardware_Final_Project_Private_V2\golden\srcnn_hls\solution1\.autopilot\db\srcnn.pp.0.cpp:3798:2: warning: Added loop label VITIS_LOOP_188_11:   [xilinx-label-all-loops]
 for (int o3=0; o3<1; o3++) {
 ^~~
 VITIS_LOOP_188_11: 
C:\Users\james\Documents\Hardware_Final_Project_Private_V2\golden\srcnn_hls\solution1\.autopilot\db\srcnn.pp.0.cpp:3798:2: note: FIX-IT applied suggested code changes
C:\Users\james\Documents\Hardware_Final_Project_Private_V2\golden\srcnn_hls\solution1\.autopilot\db\srcnn.pp.0.cpp:3802:2: warning: Added loop label VITIS_LOOP_192_12:   [xilinx-label-all-loops]
 for (int ky=0; ky<5; ky++) {
 ^~~
 VITIS_LOOP_192_12: 
C:\Users\james\Documents\Hardware_Final_Project_Private_V2\golden\srcnn_hls\solution1\.autopilot\db\srcnn.pp.0.cpp:3802:2: note: FIX-IT applied suggested code changes
C:\Users\james\Documents\Hardware_Final_Project_Private_V2\golden\srcnn_hls\solution1\.autopilot\db\srcnn.pp.0.cpp:3803:15: warning: Added loop label VITIS_LOOP_193_13:   [xilinx-label-all-loops]
              for (int kx=0; kx<5; kx++) {
              ^~~
              VITIS_LOOP_193_13: 
C:\Users\james\Documents\Hardware_Final_Project_Private_V2\golden\srcnn_hls\solution1\.autopilot\db\srcnn.pp.0.cpp:3803:15: note: FIX-IT applied suggested code changes
